--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=user-service-endpoint
+management.endpoints.web.exposure.include=hystrix.stream
+management.endpoint.health.show-details=always
+hystrix.dashboard.proxy-stream-allow-list=*
+
